@@ -3,11 +3,15 @@
  */
 
 #include "VoxFileFormat.h"
+#include "core/Var.h"
+#include "voxel/CubicSurfaceExtractor.h"
+#include "voxel/IsQuadNeeded.h"
 #include "voxel/MaterialColor.h"
 #include "VolumeFormat.h"
 #include "core/Common.h"
 #include "core/Log.h"
 #include "core/Color.h"
+#include "voxel/Mesh.h"
 #include <limits>
 
 namespace voxel {
@@ -58,6 +62,22 @@ bool VoxFileFormat::save(const RawVolume* volume, const io::FilePtr& file) {
 	VoxelVolumes volumes;
 	volumes.push_back(VoxelVolume(const_cast<RawVolume*>(volume)));
 	return saveGroups(volumes, file);
+}
+
+bool MeshExporter::saveGroups(const VoxelVolumes& volumes, const io::FilePtr& file) {
+	voxel::RawVolume *volume = volumes.merge();
+	if (volume == nullptr) {
+		Log::error("Could not merge volumes");
+		return false;
+	}
+
+	bool mergeQuads = core::Var::get("voxformat_mergequads", "true", core::CV_NOPERSIST)->boolVal();
+	bool reuseVertices = core::Var::get("voxformat_reusevertices", "true", core::CV_NOPERSIST)->boolVal();
+
+	voxel::Mesh mesh;
+	voxel::extractCubicMesh(volume, volume->region(), &mesh, voxel::IsQuadNeeded(), glm::ivec3(0), mergeQuads, reuseVertices);
+	delete volume;
+	return saveMesh(mesh, file);
 }
 
 }
