@@ -1,6 +1,7 @@
 vengi (0.0.8.0-1) UNRELEASED; urgency=low
 
   * General:
+  * Added obj and ply export support
 
  -- Martin Gerhardy <martin.gerhardy@gmail.com>  Tue, 15 Sep 2020 22:14:07 +0200
 
